2009-12-16      Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* console/console.c: adapted to new prototype for *_write
	function

2009-12-14	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* console/console.c, include/bsp.h, network/network.c: get vital
	data from dBUG for COBRA5475 board

2009-11-03	Ralf Corsépius <ralf.corsepius@rtems.org>

	* startup/init548x.c: Comment out junk from end of #endif.

2009-11-03	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Add RTEMS_BSP_LINKCMDS.
	* make/custom/m5484FireEngine.cfg: Remove RTEMS_LINKCMDS.
	* make/custom/COBRA5475.cfg: Remove RTEMS_LINKCMDS.
	* make/custom/genmcf548x.inc: Remove LDFLAGS.
	* startup/linkcmds: Remove (Renamed into linkcmds).
	* startup/linkcmds.m5484FireEngine: New (Renamed from linkcmds).
	* Makefile.am: Rework linkcmds handling.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/genmcf548x.inc: Remove RTEMS_BSP_FAMILY.

2009-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/genmcf548x.inc: New (Renamed from genmcf548x.cfg).
	* make/custom/genmcf548x.cfg: Removed.
	* make/custom/COBRA5475.cfg, make/custom/m5484FireEngine.cfg:
	Include make/custom/genmcf548x.inc.

2009-10-16	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* Makefile.am, README, configure.ac,
	* console/console.c, start/start.S startup/init548x.c,
	* startup/linkcmds, startup/linkcmds.m5484FireEngine.flash,
	* make/custom/COBRA5475.cfg, startup/linkcmds.COBRA5475:

	Added support for COBRA5475 board

2009-10-15	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* network/network.c: add PHY control support

2009-10-15	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* Makefile.am, include/bsp.h, network/network.c: add network support
	* console/console.c, clock/clock.c, startup/init548x.c,
	* README: 
	various corrections

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/genmcf548x.cfg: New (relocated from /make/custom).